fixed theme toggle vertical spacing

--- a/public/styles/buttons.css
+++ b/public/styles/buttons.css
@@ -10,7 +10,7 @@ a:hover {
 .btn {
   width: 100%;
   border-radius: 0.25rem;
-  transition: all 0.5s;
+  /* transition: all 0.5s; */
   text-transform: uppercase;
   font-weight: 700;
   font-size: 0.88rem;
